# abm_pneu_model

./: .gitignore  LICENSE  README.md  pyproject.toml
code/code_guide/: introduction.ipynb
code/run_scenarios/: at_risk_varying_disease_model.py  base_params.py  run_atrisk_varying_disease_model_combo_base_0_18_v116.py  run_atrisk_varying_disease_model_combo_sce_18_30_scenarios_v116_low_vacc_uptake_new_initial_full_set.py
code/src/code_guide/: introduction.html  introduction.ipynb
code/src/model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/src/run_scenarios/: at_risk_varying_disease_model.py  base_params.py  plotting_helper_functions.py  run_atrisk_varying_disease_model_combo_base_0_18_v116.py  (+3 more)
data/clinical_pathway/: GP_to_hospital_multiplier.csv  assumed_p_death.csv  avg_prop_ipd_by_age.csv  cap_and_ipd_summary_stats_by_age_year.csv  cap_ipd_rates_per100k_by_age.csv  clean_CAP_bycalendaryear.csv  clean_CAP_with_poprate.csv  clean_IPD.csv  clean_IPD_with_poprate.csv  prop_IPD_vaccine_type_byage.csv  prop_IPD_vaccine_type_byage_v116.csv  prop_IPD_vaccine_type_byage_v116_2023.csv  prop_IPD_vaccine_type_byyear.csv
data/disease/: at_risk_percentages.csv
data/immunity/: antibody_distributions.csv  antibody_distributions_v116.csv  immune_group_list_20231010.csv  immune_group_list_20231027_sen.csv  immune_group_list_v116.csv  v116_immune_group_parameters.csv
data/population/: all_contact_matrix_Australia_prem_2017.csv
src/pneu_abm/: __init__.py
src/pneu_abm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+70 files in other folders)
